<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.editstudent.EditStudentActivity">

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#0097A7"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/capnhat"
             android:layout_centerInParent="true"
             android:gravity="center"
             android:textSize="18sp"
             android:textColor="#FFFFFF"

             />
        <ImageButton
            android:id="@+id/imb_back_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:background="@drawable/ic_back"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/content_layout"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/hotenstudent"
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/edt_update_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/ngaysinhstudent"
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="12dp" />

        <EditText
            android:id="@+id/edt_update_birth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="3dp"
            android:inputType="number"
            android:layout_marginRight="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/gioitinhstudent"
            android:textColor="#212121"
            android:textSize="18sp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="12dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/content_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/content_layout"
        tools:layout_editor_absoluteX="40dp">

        <RadioGroup
            android:id="@+id/rdg_sex_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/rd_nam_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:text="@string/nam"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/rd_nu_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:text="@string/nu"
                android:textSize="22sp" />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:layout_constraintTop_toBottomOf="@+id/content_linear_layout"
        android:layout_marginTop="18dp"
        android:id="@+id/bt_save_update"
        android:textColor="#FFFFFF"
        android:inputType="textCapCharacters"
        android:background="@drawable/custom_button"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/luu"
        android:textSize="18sp"

        tools:ignore="TextViewEdits" />
</androidx.constraintlayout.widget.ConstraintLayout>