<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:foreground="@drawable/button_effect"
            android:inputType="textCapCharacters"
            android:text="@string/luu"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_themchuyennganh"
            tools:ignore="TextViewEdits,UnusedAttribute" />


        <EditText
            android:id="@+id/edt_themdiachi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/diachi"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/edt_themchuyennganh"
            app:layout_constraintTop_toBottomOf="@+id/content_linearlayout"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edt_themchuyennganh"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/chuyennganh"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/edt_themdiachi"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edt_tensv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/tensinhvien"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/content_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_themgioitinh"
            tools:layout_editor_absoluteX="40dp">

            <RadioGroup
                android:id="@+id/rdg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/rd_nam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginLeft="22dp"
                    android:buttonTint="@color/your_color"
                    android:text="@string/nam"
                    android:textSize="22sp"
                    tools:ignore="UnusedAttribute" />


                <RadioButton
                    android:id="@+id/rd_nu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginLeft="22dp"
                    android:buttonTint="@color/your_color"
                    android:text="@string/nu"
                    android:textSize="22sp" />


            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#0097A7"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="6dp">

            <ImageButton
                android:id="@+id/imb_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/ic_back"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/custom_edittext"
            android:padding="8dp"
            android:text="@string/themngaysinh"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/txt_themgioitinh"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_tensv"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_themgioitinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="18dp"
            android:text="@string/gioitinh"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/content_linearlayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_date"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="model"
            type="com.example.managerstudent_mvvm.view.addstudent.AddStudentViewModel" />
    </data>
</layout>