<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card-view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="8dp"
    android:background="#F5F5F5"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/content_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/crv_gioitinh"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ngaysinhstudent"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/content_relative_layout"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
        <TextView
            android:id="@+id/txt_sex_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_date_student"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/content_relative_layout"
           />
        <TextView
            android:id="@+id/txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/gioitinhstudent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/content_relative_layout"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/txt_date_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/content_relative_layout"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_student" />

        <TextView
            android:id="@+id/txt_name_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/content_relative_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/hotenstudent"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/content_relative_layout"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>